# hall-of-fame

./: .gitignore  LICENSE  client.py  component.py  entity.py  message.py  pyproject.toml  requirements.txt  server.py
components/: animation.py  camera_followed.py  model.py  tilt_controls.py
hall_of_fame/: client.py  config.py  entity.py  message.py  server.py
hall_of_fame/components/: animation.py  camera_followed.py  tilt_controls.py
src/hall_of_fame/: client.py
src/hall_of_fame/components/: model.py
